[gd_scene load_steps=10 format=2]

[ext_resource path="res://RiceCooker.gd" type="Script" id=1]
[ext_resource path="res://Art/progress_foreground.png" type="Texture" id=2]
[ext_resource path="res://Art/progress_background.png" type="Texture" id=3]
[ext_resource path="res://Art/rice_cooker128x128.png" type="Texture" id=4]
[ext_resource path="res://Art/rice_bowl.png" type="Texture" id=5]
[ext_resource path="res://Music/InteractSound.mp3" type="AudioStream" id=6]
[ext_resource path="res://Music/Bell.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.5, 45 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 33 )

[node name="RiceCooker" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 1 )
scale = Vector2( 0.519531, 0.542969 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 2 )

[node name="RiceCookerTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ProgressBar" type="TextureProgress" parent="."]
margin_left = -28.0
margin_top = -3.0
margin_right = 72.0
margin_bottom = 17.0
rect_scale = Vector2( 0.6, 0.6 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[node name="FoodSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 5.96046e-08, 4 )
scale = Vector2( 0.22909, 0.214375 )
texture = ExtResource( 5 )

[node name="InteractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Bell" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="RiceCookerTimer" to="." method="_on_RiceCookerTimer_timeout"]
